# ml-examples

./: .gitignore  README.md  pyproject.toml
ml_examples/downloaders/: downloadIris.py
ml_examples/iris/: linearRegression.py  perceptron.py
ml_examples/loaders/: loadIris.py
ml_examples/plot/: plotIris.py
ml_examples/utils/: utils.py
