[tool.poetry]
name = "ml-examples"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_examples"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.2"
requests = "^2.28.2"
progress = "^1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
